pypanel/templates/iptables.rules
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -d 127.0.0.0/8 ! -i lo -j REJECT --reject-with icmp-port-unreachable
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT

# FTP
-A INPUT -p tcp -m tcp --dport 21 -j ACCEPT

# SMTP
-A INPUT -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 587 -j ACCEPT

# DNS
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT

# HTTP
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT

# POP3
-A INPUT -p tcp -m tcp --dport 110 -j ACCEPT

# IMAP
-A INPUT -p tcp -m tcp --dport 143 -j ACCEPT

# HTTPS
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT

# IMAPS
-A INPUT -p tcp -m tcp --dport 993 -j ACCEPT

# POP3S
-A INPUT -p tcp -m tcp --dport 995 -j ACCEPT

# MYSQL
-A INPUT -p tcp -m tcp --dport 3306 -j ACCEPT

# SSH
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT

-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables denied: " --log-level 7
-A INPUT -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -j ACCEPT
COMMIT
